@@ -76,7 +76,11 @@ ATTR AttrTable[] =
     {"Away",        A_AWAY,     AF_ODARK | AF_NOPROG},
     {"Charges",     A_CHARGES,  AF_ODARK | AF_NOPROG},
     {"CmdCheck",    A_CMDCHECK, AF_DARK | AF_NOPROG | AF_NOCMD | AF_NOCLONE | AF_PRIVATE | AF_CONST},
+    {"Comjoin",     A_COMJOIN,  AF_ODARK | AF_NOPROG},
+    {"Comleave",    A_COMLEAVE, AF_ODARK | AF_NOPROG},
     {"Comment",     A_COMMENT,  AF_MDARK | AF_WIZARD},
+    {"Comoff",      A_COMOFF,   AF_ODARK | AF_NOPROG},
+    {"Comon",       A_COMON,    AF_ODARK | AF_NOPROG},
     {"ConFormat",   A_CONFORMAT, AF_ODARK | AF_NOPROG},
     {"Cost",        A_COST,     AF_ODARK | AF_NOPROG},
     {"Created",     A_CREATED,  AF_ODARK | AF_NOPROG | AF_NOCMD | AF_NOCLONE | AF_GOD},
